@@ -54,11 +54,6 @@
 
 
 //
-// CAUTION!  This code must be copied to RAM before execution.  Therefore,
-// it must not contain any code which might be position dependent!
-//
-
-//
 // The difficulty with this operation is that the hardware does not support
 // unlocking single blocks.  However, the logical layer would like this to
 // be the case, so this routine emulates it.  The hardware can clear all of
@@ -68,6 +63,9 @@
 
 #define MAX_FLASH_BLOCKS 128
 
+int
+flash_unlock_block(volatile flash_t *block, int block_size, int blocks)
+	__attribute__ ((section (".2ram.flash_unlock_block")));
 int
 flash_unlock_block(volatile flash_t *block, int block_size, int blocks)
 {
